--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Tejus Pratap<tejzpr@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "7.1.2",
     "@babel/helper-module-imports": "7.0.0-beta.56",
+    "@babel/polyfill": "7.0.0",
     "@types/bluebird": "3.5.21",
     "@types/chai": "4.1.4",
     "@types/dotenv": "4.0.3",
@@ -24,12 +26,14 @@
     "axios": "0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
+    "babel-loader": "8.0.4",
     "babel-plugin-syntax-jsx": "7.0.0-beta.3",
     "babel-plugin-transform-vue-jsx": "4.0.1",
     "babel-preset-env": "1.7.0",
     "bluebird": "3.5.1",
     "bootstrap-vue": "2.0.0-rc.11",
     "chai": "4.1.2",
+    "date-fns": "1.29.0",
     "dotenv": "6.0.0",
     "less": "3.0.4",
     "less-loader": "4.1.0",
