--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "vue-uuid": "^1.0.0",
     "vuex": "3.0.1",
     "vuex-persist": "1.4.3",
-    "vuex-router-sync": "5.0.0"
+    "vuex-router-sync": "5.0.0",
+    "webpack": "4.20.2"
   },
   "devDependencies": {},
   "browserslist": [
